--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -27,7 +27,7 @@
     <script>
         console.log("script...")
         $("#show-new-product").on("click", function(e){
-            console.log("show-new-product clicked...")
+            window.location.href = '/category/new'
         })
     </script>
 </th:block>
