--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -14,11 +14,10 @@
             </div>
             <ul class="navbar-nav">
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="productDropdown" role="button" data-bs-toggle="dropdown"
-                       aria-expanded="false">
+                    <a class="nav-link" href="#" id="productDropdown" role="button" data-bs-toggle="dropdown"
+                       aria-expanded="false" onclick="location.href='/category/new'">
                         상품 구경하기
                     </a>
-                    <ul class="dropdown-menu" aria-labelledby="productDropdown" id="product-dropdown"></ul>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown2" role="button" data-bs-toggle="dropdown"
@@ -73,36 +72,6 @@
             location.href='/logout';
         }
 
-        /* 상품 구경하기 헤더 구성하기 */
-        const drawCategoryDom = () => {
-            $.ajax({
-                type: 'GET',
-                url: `/api/category`,
-                dataType: 'json',
-                contentType: 'application/json',
-                success: function (data) {
-                    if(data.httpStatus === 200) {
-                        const category = data.message
-                        let body = ''
-                        const dom = document.getElementById("product-dropdown");
-                        dom.innerHTML = ''
-
-                        body += `<li><a class="dropdown-item" href="/category/new"><i data-feather="heart" class="font-medium-2 ms-50"></i>&nbsp;최신상품</a></li>`
-
-                        category.forEach((data, i) => {
-                            body += `<li><a class="dropdown-item" href="/category/${data['categoryId']}">${data['categoryName']}</a></li>`
-                        })
-
-                        dom.innerHTML = body
-                        feather.replace()
-                    }
-                },
-                error: function (xhr, status, error) {
-                    console.error('Error getting password:', error);
-                }
-            });
-        }
-
         const drawPostDom = () => {
             $.ajax({
                 type: 'GET',
@@ -131,7 +100,6 @@
 
 
         window.onload = function() {
-            drawCategoryDom();
             drawPostDom();
         };
 
